If email classified as spam is delivered to some folder by a global Procmail configuration (either in /etc/procmailrc or a Virtualmin per-domain setting), display this on the list of filters.
Changed the module name to Filter and Forward Mail.
Added a simple page for setting up forwarding.
---- Changes since 1.290 ----
Added a Module Config option to create a .forward file automatically that runs procmail, for systems that don't have procmail delivery globally enabled.
Added Module Config options to set the minimum allowed time between autoreplies, and to force use of that minimum.
---- Changes since 1.320 ----
The default From: address for autoreplies now respects the default address set in the user's address book.
---- Changes since 1.330 ----
Added a filter condition to match mail with a spam score at or above some level.
If spam deletion above some level level is configured globally or for the user's domain, display a non-editable rule for it.
---- Changes since 1.360 ----
Autoreply messages containing non-ASCII characters are now properly quoted-printable encoded.
---- Changes since 1.400 ----
Filters that deliver to mbox-format folders now have locking enabled.
Creation of filters that match headers is now less error-prone, due to a new menu for selecting if it should match the start, end or any part of the header.
---- Changes since 1.410 ----
When an autoreply is deleted, the underlying message file is deleted too.
---- Changes since 1.420 ----
Autoreply messages starting with <html> or <body> will now be sent using the text/html MIME type.
---- Changes since 1.430 ----
Quick autoreply and forward setup pages now only show un-conditional rules.
---- Changes since 1.450 ----
Added option to select the character set of automatic reply messages.
---- Changes since 1.460 ----
Added a checkbox (on by default) to not forward bounce emails, which can cause mail loops.