@@ -32,3 +32,4 @@ Quick autoreply and forward setup pages now only show un-conditional rules.
 Added option to select the character set of automatic reply messages.
 ---- Changes since 1.460 ----
 Added a checkbox (on by default) to not forward bounce emails, which can cause mail loops.
+Text for rules that match on headers is now automatically escaped unless the new "Regular expression" box is checked, which makes creation of simple substring matching rules easier for users.
